--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: url(https://source.unsplash.com/1600x900/?landscape);
+    background: black;
     background-size: cover;
     display: flex;
     justify-content: center;
